fixed scaling issue on mobile

--- a/dev/styles/_projects.scss
+++ b/dev/styles/_projects.scss
@@ -4,6 +4,9 @@
     }
     img:hover {
         transform: scale(1.1);
+        @media (max-width: 500px) {
+            transform: none;
+        }
     }
     &__container {
         &-card {
